# myactuator_rmd

./: .codecov.yml  .gitignore  CMakeLists.txt  CTestCustom.cmake.in  ConfigExtras.cmake  MANIFEST.in  ReadMe.md  install_myactuator_rmd.sh  myactuator_rmd_py.pyi  package.xml  setup.cfg  setup.py
.github/workflows/: run-tests.yml
bindings/: myactuator_rmd.cpp  myactuator_rmd_driver.cpp
cmake/: CTestCustom.cmake.in  Config.cmake.in
doc/: Setup.md
include/myactuator_rmd/: actuator.hpp  actuator_constants.hpp  actuator_interface.hpp  driver.hpp  exceptions.hpp  io.hpp  myactuator_rmd.hpp  version.hpp
include/myactuator_rmd/actuator_state/: acceleration_function_index.hpp  acceleration_type.hpp  baud_rate.hpp  can_baud_rate.hpp  control_mode.hpp  error_code.hpp  feedback.hpp  gains.hpp  motor_status_1.hpp  motor_status_2.hpp  motor_status_3.hpp
include/myactuator_rmd/can/: exceptions.hpp  frame.hpp  node.hpp  utilities.hpp
include/myactuator_rmd/driver/: can_address_offset.hpp  can_driver.hpp  can_node.hpp  driver.hpp
include/myactuator_rmd/protocol/: address_offset.hpp  command_type.hpp  message.hpp  node.hpp  request.hpp  requests.hpp  response.hpp  responses.hpp  single_motor_message.hpp  single_motor_request.hpp  single_motor_response.hpp
include/myactuator_rmd/protocol/requests/: get_controller_gains_request.hpp  get_motor_model_request.hpp  get_motor_status_1_request.hpp  get_motor_status_2_request.hpp  get_motor_status_3_request.hpp  get_version_date_request.hpp  request.hpp  set_controller_gains_persistently_request.hpp  set_controller_gains_request.hpp  set_gains_request.hpp  set_position_absolute_request.hpp  set_torque_request.hpp  set_velocity_request.hpp  shutdown_motor_request.hpp  stop_motor_request.hpp
include/myactuator_rmd/protocol/responses/: feedback_response.hpp  gains_response.hpp  get_controller_gains_response.hpp  get_motor_model_response.hpp  get_motor_status_1_response.hpp  get_motor_status_2_response.hpp  get_motor_status_3_response.hpp  get_version_date_response.hpp  response.hpp  set_controller_gains_persistently_response.hpp  set_controller_gains_response.hpp  set_position_absolute_response.hpp  set_torque_response.hpp  set_velocity_response.hpp  shutdown_motor_response.hpp  stop_motor_response.hpp
include/myactuator_rmd_driver/: driver.hpp  error_codes.hpp  exceptions.hpp  feedback.hpp  gains.hpp  io.hpp  motor_status_1.hpp  motor_status_3.hpp  node.hpp  version.hpp
include/myactuator_rmd_driver/actuator_state/: error_code.hpp  feedback.hpp  motor_status_1.hpp  motor_status_2.hpp
include/myactuator_rmd_driver/can/: exceptions.hpp  frame.hpp  interface.hpp  node.hpp  output.hpp  utilities.hpp
include/myactuator_rmd_driver/messages/: definitions.hpp  message.hpp  request.hpp  requests.hpp  response.hpp  responses.hpp
include/myactuator_rmd_driver/messages/requests/: get_controller_gains_request.hpp  get_motor_model_request.hpp  get_motor_status_1_request.hpp  get_motor_status_2_request.hpp  get_motor_status_3_request.hpp  get_version_date_request.hpp  set_controller_gains_persistently_request.hpp  set_controller_gains_request.hpp  set_gains_request.hpp  set_position_absolute_request.hpp  set_torque_request.hpp  set_velocity_request.hpp  shutdown_motor_request.hpp  (+2 more)
include/myactuator_rmd_driver/protocol/: address_offset.hpp  command_type.hpp  message.hpp  node.hpp  requests.hpp  responses.hpp
myactuator_rmd/: __init__.py
src/: actuator.cpp  actuator_interface.cpp  driver.cpp  main.cpp
src/can/: exceptions.cpp  frame.cpp  interface.cpp  node.cpp  output.cpp  utilities.cpp
src/messages/: message.cpp  request.cpp  response.cpp
src/messages/requests/: set_position_absolute_request.cpp  set_torque_request.cpp  set_velocity_request.cpp
src/messages/responses/: feedback_response.cpp  get_motor_model_response.cpp  get_motor_status_1_response.cpp  get_motor_status_3_response.cpp  get_version_date_response.cpp  set_position_absolute_response.cpp  shutdown_motor_response.cpp  stop_motor_response.cpp  version_date_response.cpp
src/protocol/: requests.cpp  responses.cpp
src/protocol/requests/: set_position_absolute_request.cpp  set_torque_request.cpp  set_velocity_request.cpp
src/protocol/responses/: feedback_response.cpp  get_motor_model_response.cpp  get_motor_status_1_response.cpp  get_motor_status_3_response.cpp  get_version_date_response.cpp  shutdown_motor_response.cpp  stop_motor_response.cpp
test/: actuator_adaptor.cpp  actuator_adaptor.hpp  actuator_mock.cpp  actuator_mock.hpp  actuator_test.cpp  can_node.cpp  driver_actuator_test.cpp  driver_actuator_test.hpp  driver_test.cpp  run_tests.cpp
test/can/: utilities_test.cpp
test/messages/requests/: set_controller_gains_persistently_request_test.cpp  set_controller_gains_request_test.cpp  set_position_absolute_request_test.cpp  set_torque_request_test.cpp  set_velocity_request_test.cpp
test/messages/responses/: get_controller_gains_response_test.cpp  get_motor_model_response_test.cpp  get_motor_status_1_response_test.cpp  get_motor_status_2_response_test.cpp  get_motor_status_3_response_test.cpp  get_version_date_response_test.cpp  set_position_absolute_response_test.cpp  set_torque_response_test.cpp  set_velocity_response_test.cpp
test/mock/: actuator_actuator_mock_test.cpp  actuator_actuator_mock_test.hpp  actuator_adaptor.cpp  actuator_adaptor.hpp  actuator_mock.cpp  actuator_mock.hpp  driver_actuator_test.cpp  driver_actuator_test.hpp
test/protocol/: requests_test.cpp  responses_test.cpp
test/protocol/requests/: set_controller_gains_persistently_request_test.cpp  set_controller_gains_request_test.cpp  set_position_absolute_request_test.cpp  set_torque_request_test.cpp  set_velocity_request_test.cpp
test/protocol/responses/: get_controller_gains_response_test.cpp  get_motor_model_response_test.cpp  get_motor_status_1_response_test.cpp  get_motor_status_2_response_test.cpp  get_motor_status_3_response_test.cpp  get_version_date_response_test.cpp  set_position_absolute_response_test.cpp  set_torque_response_test.cpp  set_velocity_response_test.cpp
(+47 files in other folders)
