<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myactuator_rmd</name>
  <version>0.0.1</version>
  <description>CAN driver for MyActuator RMD-X-series</description>
  <maintainer email="tobit.flatscher@outlook.com">Tobit Flatscher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
