[metadata]
name = myactuator_rmd_py
description = CAN driver for the MyActuator RMD X actuator series
url = https://github.com/2b-t/myactuator_rmd
author = Tobit Flatscher
author_email = tobit.flatscher@outlook.com
keywords = myactuator, rmd, rmd-x, can, driver
long_description = file: ReadMe.md
license = MIT
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: System :: Hardware
version = 0.0.1

[options]
zip_safe = False
python_requires = >=3.7

[project.extras_require]
test = pytest>=6.0

